--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/three": "^0.158.1",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/menu": "^2.2.1",
+    "@chakra-ui/next-js": "^2.2.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@typescript-eslint/parser": "^6.9.1",
+    "framer-motion": "^10.16.4",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
@@ -20,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.158.1",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
