--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
   ],
   "plugins": ["@typescript-eslint", "react"],
   "rules": {
-    "linebreak-style": ["error", "windows"],
+    "linebreak-style": ["error", "unix"],
     "react/react-in-jsx-scope": "off",
     "react/function-component-definition": [
       2,
@@ -31,6 +31,12 @@
         "unnamedComponents": "arrow-function"
       }
     ],
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "@typescript-eslint/semi": "off",
+    "lines-around-directive": "off",
+    "arrow-body-style": "off",
+    "react/self-closing-comp": "off",
+    "import/extensions": "off",
+    "operator-linebreak": "off"
   }
 }
