--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@typescript-eslint/parser": "^6.9.1",
+    "firebase": "^10.7.0",
     "framer-motion": "^10.16.4",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "three": "^0.158.0"
   },
   "devDependencies": {
